added ome literature review

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -44,3 +44,286 @@
 	edition      = {22., völlig neu bearbeitete und erweiterte Auflage}
 }
 @comment{jabref-meta: databaseType:biblatex;}
+
+@article{pargaonkar2021quality,
+  title={Quality and Metrics in Software Quality Engineering},
+  author={Pargaonkar, Shravan},
+  journal={Journal of Science \& Technology},
+  volume={2},
+  number={1},
+  pages={62--69},
+  year={2021}
+}
+
+
+@inproceedings{pantiuchina2018improving,
+  title={Improving code: The (mis) perception of quality metrics},
+  author={Pantiuchina, Jevgenija and Lanza, Michele and Bavota, Gabriele},
+  booktitle={2018 IEEE International Conference on Software Maintenance and Evolution (ICSME)},
+  pages={80--91},
+  year={2018},
+  organization={IEEE}
+}
+
+
+@article{lee2014software,
+  title={Software quality factors and software quality metrics to enhance software quality assurance},
+  author={Lee, Ming-Chang},
+  journal={British Journal of Applied Science \& Technology},
+  volume={4},
+  number={21},
+  pages={3069--3095},
+  year={2014}
+}
+
+@inproceedings{stroggylos2007refactoring,
+  title={Refactoring--does it improve software quality?},
+  author={Stroggylos, Konstantinos and Spinellis, Diomidis},
+  booktitle={Fifth International Workshop on Software Quality (WoSQ'07: ICSE Workshops 2007)},
+  pages={10--10},
+  year={2007},
+  organization={IEEE}
+}
+
+
+@article{mcintosh2016empirical,
+  title={An empirical study of the impact of modern code review practices on software quality},
+  author={McIntosh, Shane and Kamei, Yasutaka and Adams, Bram and Hassan, Ahmed E},
+  journal={Empirical Software Engineering},
+  volume={21},
+  pages={2146--2189},
+  year={2016},
+  publisher={Springer}
+}
+
+
+@inproceedings{stegeman2014towards,
+  title={Towards an empirically validated model for assessment of code quality},
+  author={Stegeman, Martijn and Barendsen, Erik and Smetsers, Sjaak},
+  booktitle={Proceedings of the 14th Koli Calling international conference on computing education research},
+  pages={99--108},
+  year={2014}
+}
+
+
+@article{jessup2021using,
+  title={Using eye-tracking data to compare differences in code comprehension and code perceptions between expert and novice programmers},
+  author={Jessup, Sarah and Willis, Sasha M and Alarcon, Gene and Lee, Michael},
+  year={2021}
+}
+
+
+@inproceedings{sharif2012eye,
+  title={An eye-tracking study on the role of scan time in finding source code defects},
+  author={Sharif, Bonita and Falcone, Michael and Maletic, Jonathan I},
+  booktitle={Proceedings of the symposium on eye tracking research and applications},
+  pages={381--384},
+  year={2012}
+}
+
+
+@article{kitchenham1996software,
+  title={Software quality: the elusive target [special issues section]},
+  author={Kitchenham, Barbara and Pfleeger, Shari Lawrence},
+  journal={IEEE software},
+  volume={13},
+  number={1},
+  pages={12--21},
+  year={1996},
+  publisher={Ieee}
+}
+
+
+@inproceedings{stegeman2016designing,
+  title={Designing a rubric for feedback on code quality in programming courses},
+  author={Stegeman, Martijn and Barendsen, Erik and Smetsers, Sjaak},
+  booktitle={Proceedings of the 16th Koli Calling International Conference on Computing Education Research},
+  pages={160--164},
+  year={2016}
+}
+
+@inproceedings{sharif2010eye,
+  title={An eye tracking study on camelcase and under\_score identifier styles},
+  author={Sharif, Bonita and Maletic, Jonathan I},
+  booktitle={2010 IEEE 18th International Conference on Program Comprehension},
+  pages={196--205},
+  year={2010},
+  organization={IEEE}
+}
+
+@inproceedings{sharif2010eye,
+  title={An eye tracking study on camelcase and under\_score identifier styles},
+  author={Sharif, Bonita and Maletic, Jonathan I},
+  booktitle={2010 IEEE 18th International Conference on Program Comprehension},
+  pages={196--205},
+  year={2010},
+  organization={IEEE}
+}
+
+@inproceedings{sharif2012eye,
+  title={An eye-tracking study on the role of scan time in finding source code defects},
+  author={Sharif, Bonita and Falcone, Michael and Maletic, Jonathan I},
+  booktitle={Proceedings of the symposium on eye tracking research and applications},
+  pages={381--384},
+  year={2012}
+}
+
+@article{tonella2008code,
+  title={Code quality from the programmer’s perspective},
+  author={Tonella, Paolo and Abebe, Surafel Lemma and others},
+  journal={Proceedings of Science, XII Advanced Computing and Analysis Techniques in Physics Research, Erice, Italy},
+  volume={5},
+  pages={153},
+  year={2008}
+}
+
+
+@article{jessup2021using,
+  title={Using eye-tracking data to compare differences in code comprehension and code perceptions between expert and novice programmers},
+  author={Jessup, Sarah and Willis, Sasha M and Alarcon, Gene and Lee, Michael},
+  year={2021}
+}
+
+@misc{broberg2019using,
+  title={Using eye tracking to study variable naming conventions and their effect on code readability},
+  author={Broberg, Pontus and Jahanshahi, Shapour},
+  year={2019}
+}
+
+
+@article{obaidellah2018survey,
+  title={A survey on the usage of eye-tracking in computer programming},
+  author={Obaidellah, Unaizah and Al Haek, Mohammed and Cheng, Peter C-H},
+  journal={ACM Computing Surveys (CSUR)},
+  volume={51},
+  number={1},
+  pages={1--58},
+  year={2018},
+  publisher={ACM New York, NY, USA}
+}
+
+
+@article{kadar2021program,
+  title={Program Comprehension Technique in Teaching and Leaning: A Cognitive Perspective},
+  author={Kadar, Rozita and Sumari, Putra and Othman, Jamal and Mohamed, Syarifah Adilah},
+  year={2021}
+}
+
+
+@article{losavio2003quality,
+  title={Quality characteristics for software architecture},
+  author={Losavio, Francisca and Chirinos, Ledis and L{\'e}vy, Nicole and Ramdane-Cherif, Amar},
+  journal={Journal of object Technology},
+  volume={2},
+  number={2},
+  pages={133--150},
+  year={2003}
+}
+
+
+
+
+@article{fitzpatrick1996software,
+  title={Software quality: definitions and strategic issues},
+  author={Fitzpatrick, Ronan},
+  year={1996},
+  publisher={Technological University Dublin}
+}
+
+@article{aroobaunderstanding,
+  title={Understanding Comprehension of Iterative and Recursive Programs with Remote Eye Tracking},
+  author={Arooba, Aqeel and Peitek, Norman and Apel, Sven and Mucke, Jonas and Siegmund, Janet}
+}
+
+
+@article{buse2009learning,
+  title={Learning a metric for code readability},
+  author={Buse, Raymond PL and Weimer, Westley R},
+  journal={IEEE Transactions on software engineering},
+  volume={36},
+  number={4},
+  pages={546--558},
+  year={2009},
+  publisher={IEEE}
+}
+
+
+@phdthesis{zapata2013development,
+  title={Development of a Model for Security and Usability},
+  author={Zapata Aspiazu, Laura},
+  year={2013},
+  school={Informatica}
+}
+
+
+@article{haoues2017guideline,
+  title={A guideline for software architecture selection based on ISO 25010 quality related characteristics},
+  author={Haoues, Mariem and Sellami, Asma and Ben-Abdallah, Han{\^e}ne and Cheikhi, Laila},
+  journal={International Journal of System Assurance Engineering and Management},
+  volume={8},
+  pages={886--909},
+  year={2017},
+  publisher={Springer}
+}
+
+
+
+@article{losavio2004iso,
+  title={ISO quality standards for measuring architectures},
+  author={Losavio, Francisca and Chirinos, Ledis and Matteo, Alfredo and L{\'e}vy, Nicole and Ramdane-Cherif, Amar},
+  journal={Journal of systems and software},
+  volume={72},
+  number={2},
+  pages={209--223},
+  year={2004},
+  publisher={Elsevier}
+}
+
+
+@book{spinellis2006code,
+  title={Code quality: the open source perspective},
+  author={Spinellis, Diomidis},
+  year={2006},
+  publisher={Adobe Press}
+}
+
+
+@inproceedings{busjahn2014eye,
+  title={Eye tracking in computing education},
+  author={Busjahn, Teresa and Schulte, Carsten and Sharif, Bonita and Simon and Begel, Andrew and Hansen, Michael and Bednarik, Roman and Orlov, Paul and Ihantola, Petri and Shchekotova, Galina and others},
+  booktitle={Proceedings of the tenth annual conference on International computing education research},
+  pages={3--10},
+  year={2014}
+}
+
+@article{yorimoto2024quantitative,
+  title={Quantitative Quality Evaluation of the Impact of Indentation in Source Code Using Eye-Tracking},
+  author={Yorimoto, Kou and Matsumoto, Shimpei},
+  journal={IIAI Letters on Institutional Research},
+  volume={4},
+  year={2024}
+}
+
+@inproceedings{abbad2022estimating,
+  title={Estimating developers' cognitive load at a fine-grained level using eye-tracking measures},
+  author={Abbad-Andaloussi, Amine and Sorg, Thierry and Weber, Barbara},
+  booktitle={Proceedings of the 30th IEEE/ACM international conference on program comprehension},
+  pages={111--121},
+  year={2022}
+}
+
+@inproceedings{silva2023evaluating,
+  title={Evaluating the Code Comprehension of Novices with Eye Tracking},
+  author={Silva Da Costa, Jos{\'e} Aldo and Gheyi, Rohit},
+  booktitle={Proceedings of the XXII Brazilian Symposium on Software Quality},
+  pages={332--341},
+  year={2023}
+}
+
+
+@phdthesis{bauer2017indentations,
+  title={Indentations: A Simple Matter of Style Or Support for Code Comprehension?},
+  author={Bauer, Jennifer},
+  year={2017},
+  school={Universit{\"a}t Passau}
+}
