--- a/bibliography.bib
+++ b/bibliography.bib
@@ -327,3 +327,9 @@
   year={2017},
   school={Universit{\"a}t Passau}
 }
+
+@misc{bakhuizen2019comments,
+  title={When Comments and Code Diverge: Investigating the Consequences of Bad Comments},
+  author={Bakhuizen, Ellinor and Landelius, Cecilia},
+  year={2019}
+}
